--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,14 +13,11 @@
   <input type="text" id="surname" th:field="*{person.surname}" required /><br/>
 
   <label for="gender">Gender:</label>
-  <select id="gender" th:field="*{gender}">
+  <select id="gender" th:field="*{person.gender}">
     <option value="M">Male</option>
     <option value="F">Female</option>
   </select><br/>
-  <!-- Скрытое поле для правильного формата даты -->
-  <input type="hidden" id="birthDateHidden" th:field="*{person.birthDate}" />
-  <input type="text" id="birthDate" placeholder="dd-MM-yyyy" required /><br/>
-  <label for="contactInfo">Contact Info:</label>
+  <label for="ContactInfo">Contact Info:</label>
   <input type="text" id="contactInfo" th:field="*{person.contactInfo}" required /><br/>
 
   <label for="wantPosition">Desired Position:</label>
@@ -34,25 +31,7 @@
 
   <button type="submit">Register</button>
 </form>
-<script>
-  document.querySelector('form').addEventListener('submit', function(event) {
-    var birthDateInput = document.getElementById("birthDate");
-    var birthDateHiddenInput = document.getElementById("birthDateHidden");
-
-    var dateValue = birthDateInput.value;
-    if (dateValue) {
-      // Разделить дату по формату dd-MM-yyyy
-      var parts = dateValue.split("-");
-      if (parts.length === 3) {
-        // Переформатировать в yyyy-MM-dd
-        var formattedDate = parts[2] + "-" + parts[1] + "-" + parts[0];
-        birthDateHiddenInput.value = formattedDate; // Присваиваем скрытому полю
-      }
-    }
-  });
-</script>
 </body>
 
 </html>
-
 
