--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,6 +17,11 @@
     <option value="M">Male</option>
     <option value="F">Female</option>
   </select><br/>
+
+  <label for="birthDate">BirthDate:</label>
+  <input type="date" id="birthDate" th:field="*{person.birthDate}" required /><br/>
+
+  <label for="contactInfo">Contact Info:</label>
   <input type="text" id="contactInfo" th:field="*{person.contactInfo}" required /><br/>
 
   <label for="wantPosition">Desired Position:</label>
