--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <div class="role-buttons">
-            <a href="/register_candidate" class="button">Register as Candidate</a>
+            <a href="/candidates/register_candidate" class="button">Register as Candidate</a>
             <a href="/register/patient" class="button">Register as Patient</a>
             <a href="/register/doctor" class="button">Register as Doctor</a>
         </div>
