--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -15,7 +15,7 @@
     <main>
         <div class="role-buttons">
             <a href="/candidates/register_candidate" class="button">Register as Candidate</a>
-            <a href="/register/patient" class="button">Register as Patient</a>
+            <a href="/patients/register_patient" class="button">Register as Patient</a>
             <a href="/register/doctor" class="button">Register as Doctor</a>
         </div>
     </main>
