--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -27,6 +27,8 @@ form {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Легкая тень */
+    overflow-y: auto;
+    box-sizing: border-box;
 }
 
 label {
