--- a/src/main/resources/templates/register_candidate.html
+++ b/src/main/resources/templates/register_candidate.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Register as Candidate</title>
     <link rel="stylesheet" th:href="@{/css/register.css}">
-
 </head>
 <body>
 <h1>Register as Candidate</h1>
 <form th:action="@{/candidates/register_candidate}" th:object="${candidate}" method="post">
+
     <label for="name">Name:</label>
     <input type="text" id="name" th:field="*{person.name}" required/><br/>
 
@@ -34,6 +34,12 @@
 
     <label for="experience">Experience (years):</label>
     <input type="number" id="experience" th:field="*{experience}" required/><br/>
+
+    <label for="username">Username:</label>
+    <input type="text" id="username" th:field="*{user.username}" required/><br/>
+
+    <label for="password">Password:</label>
+    <input type="text" id="password" th:field="*{user.password}" required/><br/>
 
     <button type="submit">Register</button>
 </form>
