--- a/src/main/resources/templates/patient_dashboard.html
+++ b/src/main/resources/templates/patient_dashboard.html
@@ -19,23 +19,23 @@
     <p><strong>Contact Info:</strong> <span th:text="${patient.person.contactInfo}"></span></p>
   </div>
 
-  <div class="diagnosis-section">
-    <h2>Your Diagnoses</h2>
-    <table>
-      <thead>
-      <tr>
-        <th>Diagnosis Name</th>
-        <th>ICD Code</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="diagnosis : ${patient.diagnoses}">
-        <td th:text="${diagnosis.diagnosisName}"></td>
-        <td th:text="${diagnosis.icdCode}"></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+<!--  <div class="diagnosis-section">-->
+<!--    <h2>Your Diagnoses</h2>-->
+<!--    <table>-->
+<!--      <thead>-->
+<!--      <tr>-->
+<!--        <th>Diagnosis Name</th>-->
+<!--        <th>ICD Code</th>-->
+<!--      </tr>-->
+<!--      </thead>-->
+<!--      <tbody>-->
+<!--      <tr th:each="diagnosis : ${patient.diagnoses}">-->
+<!--        <td th:text="${diagnosis.diagnosisName}"></td>-->
+<!--        <td th:text="${diagnosis.icdCode}"></td>-->
+<!--      </tr>-->
+<!--      </tbody>-->
+<!--    </table>-->
+<!--  </div>-->
 
   <div class="actions">
     <a th:href="@{/patients/patient_dashboard/{id }(patientId=${patient.id})}" class="button">Go to Patient Dashboard</a>
