--- a/src/main/resources/templates/patient_dashboard.html
+++ b/src/main/resources/templates/patient_dashboard.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Patient Dashboard</title>
-  <link rel="stylesheet" th:href="@{/css/patient-dashboard.css}">
+<!--  <link rel="stylesheet" th:href="@{/css/patient-dashboard.css}">-->
 </head>
 <body>
-<div class="dashboard-container">
-  <h1>Welcome, <span th:text="${patient.person.name}"></span>!</h1>
+<!--<div class="dashboard-container">-->
+<!--  <h1>Welcome, <span th:text="${patient.person.name}"></span>!</h1>-->
 
-  <div class="profile-section">
-    <h2>Your Profile</h2>
-    <p><strong>Name:</strong> <span th:text="${patient.person.name}"></span></p>
-    <p><strong>Surname:</strong> <span th:text="${patient.person.surname}"></span></p>
-    <p><strong>Date of Birth:</strong> <span th:text="${patient.person.birthDate}"></span></p>
-    <p><strong>Gender:</strong> <span th:text="${patient.person.gender}"></span></p>
-    <p><strong>Contact Info:</strong> <span th:text="${patient.person.contactInfo}"></span></p>
-  </div>
+<!--  <div class="profile-section">-->
+<!--    <h2>Your Profile</h2>-->
+<!--    <p><strong>Name:</strong> <span th:text="${patient.person.name}"></span></p>-->
+<!--    <p><strong>Surname:</strong> <span th:text="${patient.person.surname}"></span></p>-->
+<!--    <p><strong>Date of Birth:</strong> <span th:text="${patient.person.birthDate}"></span></p>-->
+<!--    <p><strong>Gender:</strong> <span th:text="${patient.person.gender}"></span></p>-->
+<!--    <p><strong>Contact Info:</strong> <span th:text="${patient.person.contactInfo}"></span></p>-->
+<!--  </div>-->
 
 <!--  <div class="diagnosis-section">-->
 <!--    <h2>Your Diagnoses</h2>-->
@@ -37,11 +37,11 @@
 <!--    </table>-->
 <!--  </div>-->
 
-  <div class="actions">
-    <a th:href="@{/patients/patient_dashboard/{id }(patientId=${patient.id})}" class="button">Go to Patient Dashboard</a>
-    <a href="/patients/book-appointment" class="button">Book an Appointment</a>
-    <a href="/patients/results" class="button">View Test Results</a>
-  </div>
-</div>
+<!--  <div class="actions">-->
+<!--    <a th:href="@{/patients/patient_dashboard/{id }(patientId=${patient.id})}" class="button">Go to Patient Dashboard</a>-->
+<!--    <a href="/patients/book-appointment" class="button">Book an Appointment</a>-->
+<!--    <a href="/patients/results" class="button">View Test Results</a>-->
+<!--  </div>-->
+<!--</div>-->
 </body>
 </html>
