--- a/src/main/resources/templates/vacancies.html
+++ b/src/main/resources/templates/vacancies.html
@@ -23,10 +23,36 @@
         <!-- Кнопка отклика на вакансию -->
         <button class="apply-button" th:onclick="'applyToVacancy(' + ${vacancy.id} + ')'" >Apply</button>
 
+        <button th:if="${userRole == 'ADMIN'}"
+                class="delete-button"
+                th:onclick="'deleteVacancy(' + ${vacancy.id} + ')'" >
+          Delete
+        </button>
+
         <hr/>
       </div>
     </li>
   </ul>
 </div>
 </body>
+<script>
+  function deleteVacancy(vacancyId) {
+    if (confirm("Are you sure you want to delete this vacancy?")) {
+      fetch(`/vacancies/${vacancyId}/close`, {
+        method: 'DELETE',
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      })
+              .then(response => {
+                if (response.ok) {
+                  alert("Vacancy successfully closed!");
+                  location.reload();
+                } else {
+                  alert("Failed to close vacancy.");
+                }
+              });
+    }
+  }
+</script>
 </html>
