--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -16,7 +16,7 @@
         <div class="role-buttons">
             <a href="/candidates/register_candidate" class="button">Register as Candidate</a>
             <a href="/patients/register_patient" class="button">Register as Patient</a>
-            <a href="/register/doctor" class="button">Register as Doctor</a>
+            <a href="/staff-members/register_staff" class="button">Register as Doctor</a>
             <a href="/auth/login" class="button">Login</a>
         </div>
     </main>
