--- a/src/main/resources/static/css/patient-dashboard.css
+++ b/src/main/resources/static/css/patient-dashboard.css
@@ -48,3 +48,19 @@ p {
 .button:hover {
     background-color: #6BB9E3;
 }
+
+button {
+    display: inline-block;
+    padding: 12px 20px;
+    background-color: #77B78D;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    text-decoration: none;
+    margin: 10px;
+}
+
+button:hover {
+    background-color: #6BB9E3;
+}
