feat: sending biomaterials to nurse

--- a/src/main/resources/static/css/tables.css
+++ b/src/main/resources/static/css/tables.css
@@ -4,7 +4,7 @@ body {
     font-size: 16px;
     margin: 0;
     padding: 0;
-    background-color: #FFFFF; /* Кремовый фон */
+    background-color: #FFFFFF; /* Кремовый фон */
     color: #4B4B4B; /* Темно-серый текст */
 }
 
