--- a/src/main/resources/templates/biomaterial_information.html
+++ b/src/main/resources/templates/biomaterial_information.html
@@ -43,9 +43,11 @@
                 </button>
 
                 <!-- Кнопка Send to Nurse -->
-                <button class="button send-btn" th:onclick="sendToNurse(${biomaterial.biomaterialId})">
+                <button class="button send-btn"
+                        th:onclick="'sendToNurse(' + ${biomaterial.biomaterialId} + ')'">
                     Send to Nurse
                 </button>
+
             </td>
         </tr>
         </tbody>
@@ -69,7 +71,7 @@
                 .then(response => {
                     if (response.ok) {
                         alert('Biomaterial sent to nurse successfully.');
-                        location.reload(); // Обновляем страницу
+                        location.reload();
                     } else {
                         alert('Failed to send biomaterial.');
                     }
