--- a/src/main/resources/templates/register_staff.html
+++ b/src/main/resources/templates/register_staff.html
@@ -37,6 +37,7 @@
             <option value="Geneticist">Geneticist</option>
             <option value="Technician">Technician</option>
             <option value="Laboratory Assistant">Laboratory Assistant</option>
+            <option value="Nurse">Nurse</option>
         </select><br/>
 
         <label for="qualification">Qualification:</label>
