fix: staff member login

--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -33,6 +33,10 @@
             th:onclick="|window.location.href='@{/biomaterials/all}'|">
       Information about biomaterials
     </button>
+    <button th:if="${staffMember.position == 'Nurse'}"
+            th:onclick="|window.location.href='@{/biomaterials/all}'|">
+      Information about biomaterials
+    </button>
 
   </div>
 </div>
