feat: utilization of biomaterials

--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -34,8 +34,8 @@
       Information about biomaterials
     </button>
     <button th:if="${staffMember.position == 'Nurse'}"
-            th:onclick="|window.location.href='@{/biomaterials/all}'|">
-      Information about biomaterials
+            th:onclick="|window.location.href='@{/biomaterials/expired}'|">
+      Information about expired biomaterials
     </button>
 
   </div>
