--- a/src/main/resources/templates/nurse_dashboard.html
+++ b/src/main/resources/templates/nurse_dashboard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nurse dashboard</title>
+    <link rel="stylesheet" th:href="@{/css/tables.css}">
 </head>
 <body>
 <header>
@@ -34,8 +35,9 @@
             <td th:text="${biomaterial.storagePeriodHours}"></td>
             <td>
                 <button class="button utilize-btn"
-                        th:onclick="|window.location.href='@{/biomaterials/delete/{id}(id=${biomaterial.biomaterialId})}'|">
-                    Update
+                        th:onclick="'deleteBiomaterial(' + ${biomaterial.biomaterialId} + ')'">
+<!--                        th:onclick="|window.location.href='@{/biomaterials/delete/{id}(id=${biomaterial.biomaterialId})}'|">-->
+                    Utilize
                 </button>
 
             </td>
@@ -47,6 +49,29 @@
 <footer>
     <p align="center">&copy; 2025 HealthCare System. All rights reserved.</p>
 </footer>
-
+<script>
+    function deleteBiomaterial(biomaterialId){
+        if (confirm('Are you sure you want to utilize this biomaterial?')) {
+            fetch(`/biomaterials/${biomaterialId}`, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            })
+                .then(response => {
+                    if (response.ok) {
+                        alert('Biomaterial utilized.');
+                        location.reload();
+                    } else {
+                        alert('Failed to utilize biomaterial.');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert('An error occurred while utilizing biomaterial.');
+                });
+        }
+    }
+</script>
 </body>
 </html>
