feat: new role(treating doctor), medical reports

--- a/src/main/resources/templates/register_staff.html
+++ b/src/main/resources/templates/register_staff.html
@@ -38,6 +38,7 @@
             <option value="Technician">Technician</option>
             <option value="Laboratory Assistant">Laboratory Assistant</option>
             <option value="Nurse">Nurse</option>
+            <option value="Treating doctor">Treating doctor</option>
         </select><br/>
 
         <label for="qualification">Qualification:</label>
