--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -38,6 +38,11 @@
       Information about expired biomaterials
     </button>
 
+    <button th:if="${staffMember.position == 'Treating doctor'}"
+            th:onclick="|window.location.href='@{/patients/show}'|">
+      Medical records
+    </button>
+
   </div>
 </div>
 </body>
