--- a/src/main/resources/static/css/vacancies.css
+++ b/src/main/resources/static/css/vacancies.css
@@ -96,3 +96,19 @@ hr {
 .delete-button:focus {
     outline: none;
 }
+.register-button, .view-candidates-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #6BAED6; /* Синий цвет */
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-top: 10px;
+    width: auto;
+}
+
+.register-button:hover, .view-candidates-button:hover {
+    background-color: #005BB5; /* Темно-синий цвет */
+}
