vacancy managment fix

--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -42,7 +42,10 @@
             th:onclick="|window.location.href='@{/patients/show}'|">
       Medical records
     </button>
-
+    <button th:if="${staffMember.position == 'Admin'}"
+            th:onclick="|window.location.href='@{/vacancies}'|">
+      Manage Vacancies
+    </button>
   </div>
 </div>
 </body>
