--- a/src/main/resources/static/css/patient-dashboard.css
+++ b/src/main/resources/static/css/patient-dashboard.css
@@ -43,6 +43,7 @@ p {
     font-size: 16px;
     text-decoration: none;
     margin: 10px;
+    cursor: pointer;
 }
 
 .button:hover {
@@ -59,6 +60,7 @@ button {
     font-size: 16px;
     text-decoration: none;
     margin: 10px;
+    cursor: pointer;
 }
 
 button:hover {
