--- a/src/main/resources/templates/staff_member_dashboard.html
+++ b/src/main/resources/templates/staff_member_dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Staff Registration Dashboard</title>
+  <title>Staff Member Dashboard</title>
   <link rel="stylesheet" th:href="@{/css/patient-dashboard.css}">
 </head>
 <body>
