feat: log out in patients dashboard

--- a/src/main/resources/templates/patient_dashboard.html
+++ b/src/main/resources/templates/patient_dashboard.html
@@ -38,8 +38,8 @@
 <!--  </div>-->
 
   <div class="actions">
-    <a th:href="@{/patients/patient_dashboard/{id }(patientId=${patient.id})}" class="button">Go to Patient Dashboard</a>
-    <a href="/patients/book-appointment" class="button">Book an Appointment</a>
+    <a th:href="@{/auth/login}" class="button">Log out</a>
+<!--    <a href="/patients/book-appointment" class="button">Book an Appointment</a>-->
     <a href="/patients/results" class="button">View Test Results</a>
   </div>
 </div>
